@@ -25,9 +25,6 @@ MaxBandwidth 1000
 # '-' is the standard output.
 CustomLog -
 
-# Suppress that if you want to launch avserver as a daemon.
-NoDaemon
-
 
 ##################################################################
 # Definition of the live feeds. Each live feed contains one video
